--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Display\Display.csproj" />
+  </ItemGroup>
+
 </Project>
