feat(enemy) : moving
Displaying the enemy

Making them move to the right

When they touch the right border they go down and start going to the left

When they touch the left border they go down and start going to the right

--- a/Spice_Invaders/Spice Invaders.csproj
+++ b/Spice_Invaders/Spice Invaders.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Display\Display.csproj" />
     <ProjectReference Include="..\Model\Model.csproj" />
   </ItemGroup>
 
