DBConnection & unit testing
Connect to a localhost DB
Add some unit testing

--- a/Spice_Invaders/Spice Invaders.csproj
+++ b/Spice_Invaders/Spice Invaders.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Display\Display.csproj" />
     <ProjectReference Include="..\Model\Model.csproj" />
+    <ProjectReference Include="..\Storage\Storage.csproj" />
   </ItemGroup>
 
 </Project>
